<resources>
    <string name="app_name">Hol Mal</string>

    <!-- login -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="registration">Registrieren</string>
    <string name="email">E-Mail Adresse</string>
    <string name="passwort">Passwort</string>
    <string name="passwortWdh">Passwort wiederholen</string>

    <!-- startActivity -->
    <string name="createHousehold">neuen Haushalt erstellen</string> <!-- alrenativ: Haus bauen? -->
    <string name="moveIn">in bestehenden Haushalt einziehen</string>

    <!-- RegistrationFragment1 (after create) -->
    <string name="householdName">Name des Haushalts:</string>
    <string name="id">ID:</string>
    <string name="done">Fertig</string> <!-- alternativ: bei haushalt erstellen: bauen?, bei beitreten: einziehen? -->
    <string name="copy">kopieren</string>
    <string name="copyContentDescription">Haushalts ID in die Zwischenablage kopieren</string>
    <string name="invite">Personen einladen</string>
    <string name="inviteExplanation">Jemand möchte mit dir eine Einkaufsliste teilen. Trete jetzt dem Haushalt bei.
    Dafür brauchst du nur noch die HolMal-App: </string>
    <!-- Familienmitglieder einladen -->

    <!-- RegistrationFragment 2 -->
    <string name="moveInWithID">Haushalt über ID beitreten</string>

    <!-- ShoppingLists (for items) -->
    <string name="openItemsTabs">offen</string>
    <string name="doneItemsTabs">erledigt</string>

    <string name="household">Haushalt</string>

    <!-- personal input -->
    <string name="username">Benutzername</string>
    <string name="color">Farbe</string>

    <!-- task/job stuff-->
    <string name="myJobs">Meine Aufträge</string>
    <string name="alreadyAssigned">Dieses Item ist bereits vergeben</string>

    <string name="moveInHouseholdAs">Haushalt beitreten</string>

    <!-- CreateItem -->
    <string name="createElementText">Neues Element auf die Liste schreiben</string>
    <string name="what">Was</string>
    <string name="fromFavorites">aus Favoriten</string>
    <string name="amount">Wie viel</string>
    <string name="info">Bemerkung</string>
    <string name="who">Wer bringt\'s mit</string>
    <string name="urgent">dringend</string>
    <string name="saveAsFavorite">als Favorit speichern</string>
    <string name="add">Hinzufügen</string>
    <string name="addItem">Item zu Einkaufsliste hinzufügen</string>

    <!-- itemInformation -->
    <string name="itemInformationHeading">Informationen</string>
    <string name="delete">Löschen</string>

    <string name="favorites">Favoriten</string>

    <string name="shoppingList">Einkaufszettel</string>

    <!--ShoppingListActivity-->
    <string name="noOpenItems">Keine offenen Items</string>
    <string name="openItems">Offene Items: </string>

    <!-- create ShoppingList -->
    <string name="createShoppingListHeader">Neuen Einkaufszettel erstellen</string>
    <string name="shoppingListName">Bezeichnung</string>
    <string name="category">Kategorie</string>
    <string name="create">erstellen</string>
    <string name="closeDescription">Abbrechen-Button</string>

    <!-- settings -->
    <string name="settings">Einstellungen</string>
    <string name="members">Mitglieder</string>
    <string name="leave">Haushalt verlassen</string> <!-- ausziehen -->
    <string name="edit">Bearbeiten</string>
    <string name="colourDescription">Die Farbe der Person</string>
    <string name="editEmailPassword">E-Mail/Passwort</string>

    <!-- edit account -->
    <string name="editAccoount">Kontoeinstellungen</string>
    <string name="buttonFurther">Weiter</string>
    <string name="oldPassword">Bitte gib dein altes Passwort ein, um deine Email-Adresse und dein Passwort ändern zu können</string>
    <string name="newPasswort">Neues Passwort</string>
    <string name="newPasswortWdh">Neues Passwort wiederholen</string>

    <string name="leaveConfirmation">Möchtest du den Haushalt wirklich verlassen?</string> <!-- TODO hier noch den Namen vom Haushalt evtl rein nehmen -->
    <string name="moveinConfirmation">Möchtest du diesem Haushalt wirklich beitreten? </string>
    <string name="deleteListConfirmation">Möchtest du diese Liste wirklich löschen?</string>
    <string name="deleteItemConfirmation">Möchtest du dieses Item wirklich löschen? </string>
    <string name="editSettingsConfirmation">Möchtest du wirklich diese Änderungen vornehmen?</string>
    <string name="editEmailConfirmation">Möchtest du wirkich deine Email-Adresse ändern? \nNeue Email-Adresse: </string>
    <string name="editPasswordConfirmation">Möchtest du wirklich dein Passwort ändern?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>


    <!-- Errors -->
    <string name="ErrorLoginFailed">Login fehlgeschlagen: Bitte überprüfe deine Email und dein Passwort</string>
    <string name="ErrorLoginAlreadyExists">Es existiert bereits ein User mit dieser Emailadresse</string>
    <string name="ErrorLoginNotEntered">Bitte gib deine Emailadresse und dein Passwort an</string>
    <string name="ErrorLoginShortPW">Das Passwort muss min. 6 Zeichen lang sein</string>
    <string name="ErrorLoginRepeatPW">Bitte wiederhole dein Passwort</string>
    <string name="ErrorLoginCheckPW">Bitte überprüfe dein Passwort</string>
    <string name="ErrorNoEmail">Bitte gib eine Email-Adresse an</string>
    <string name="ErrorNoPassword">Bitte gib ein Passwort an</string>
    <string name="ErrorNewEmail">Bitte gib eine neue Email-Adresse an</string>

    <string name="ErrorEnterName">Gib einen Namen ein</string>
    <string name="ErrorChoseColor">Wähle eine Farbe</string>
    <string name="ErrorNameTaken">Dieser Name ist bereits vergeben</string>
    <string name="ErrorColorTaken">Diese Farbe ist bereits vergeben</string>
    <string name="ErrorChooseHousehold">Wähle einen Haushalt</string>
    <string name="ErrorFindHousehold">Haushalt konnte nicht gefunden werden</string>
    <string name="ErrorEnterHouseholdName">Wähle einen Namen für den Haushalt</string>
    <string name="ErrorEnterItem">Gib eine Bezeichnung an</string>
    <string name="ErrorEnterShoppingListName">Gib eine Bezeichnung ein</string>
    <string name="ErrorListNameTaken">Es existiert bereits eine Liste mit diesem Namen</string>
    <string name="ErrorItemTaken">In dieser Liste existiert bereits ein Item mit dieser Bezeichnung</string>
    <string name="ErrorItemsPersonTask">Leider ist etwas schief gegangen: Die Person konnte nicht gespeichert werden</string>

    <string name="ErrorListDoesntExistAnymore">Deine zuletzt geöffnete Liste existiert leider nicht mehr</string>
    <string name="ErrorNoRecentShoppingList">Du hast keine zuletzt geöffnete Liste gespeichert</string>

    <string name="defaultShoppingList">Einkaufsliste 1</string>

    <string name="spinnerNothing"> - - - </string>
    <string-array name="spinner">
        <item> - - - </item>
        <item>Apotheke</item>
        <item>Bäcker</item>
        <item>Baumarkt</item>
        <item>Biomarkt</item>
        <item>Drogerie</item>
        <item>Elektronikgeschäft</item>
        <item>Gärtnerei</item>
        <item>Gemüsemarkt</item>
        <item>Getränkemarkt</item>
        <item>Markt</item>
        <item>Metzger</item>
        <item>Rund ums Tier</item>
        <item>Schreibwaren</item>
        <item>Supermarkt</item>
    </string-array>


    <!-- strings used to store something -->
    <string name="householdIDPreference">householdID</string>
    <string name="recentShoppingListNamePreference">recentShoppingListName</string>
    <string name="personIDPreference">personID</string>
    
    <string name="appStore">https://play.google.com/store/apps/details?id=</string>

</resources>
