<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItem">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintEnd_toStartOf="@id/rightMargin"
        app:layout_constraintTop_toBottomOf="@id/topMargin"/>

    <TextView
        android:id="@+id/createIttemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createElementText"
        app:layout_constraintTop_toBottomOf="@id/cancelButton"
        app:layout_constraintStart_toEndOf="@id/leftMargin"
        app:layout_constraintEnd_toStartOf="@id/rightMargin"/>

    <TextView
        android:id="@+id/what"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what"
        app:layout_constraintTop_toBottomOf="@id/createIttemHeader"
        app:layout_constraintStart_toEndOf="@id/leftMargin"/>

    <EditText
        android:id="@+id/whatInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/what"
        app:layout_constraintStart_toEndOf="@id/leftMargin"/>

    <Button
        android:id="@+id/fromFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromFavorites"
        app:layout_constraintStart_toEndOf="@id/whatInput"
        app:layout_constraintTop_toBottomOf="@id/what"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        app:layout_constraintStart_toEndOf="@id/leftMargin"
        app:layout_constraintTop_toBottomOf="@id/whatInput"/>

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintStart_toEndOf="@id/leftMargin"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintTop_toBottomOf="@id/amountInput"
        app:layout_constraintStart_toEndOf="@id/leftMargin"/>

    <EditText
        android:id="@+id/infoInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/leftMargin"
        app:layout_constraintTop_toBottomOf="@id/info"/>

    <CheckBox
        android:id="@+id/urgentChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urgent"
        app:layout_constraintTop_toBottomOf="@id/infoInput"
        app:layout_constraintStart_toEndOf="@id/leftMargin"/>

    <CheckBox
        android:id="@+id/saveAsFavoriteChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveAsFavorite"
        app:layout_constraintStart_toEndOf="@id/leftMargin"
        app:layout_constraintTop_toBottomOf="@id/urgentChecked"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@id/rightMargin"
        app:layout_constraintBottom_toTopOf="@id/bottomMargin"/>


    <!-- Guidelines -->

    <android.support.constraint.Guideline
        android:id="@+id/leftMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <android.support.constraint.Guideline
        android:id="@+id/topMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <android.support.constraint.Guideline
        android:id="@+id/rightMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <android.support.constraint.Guideline
        android:id="@+id/centerLineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/centerLineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/quarterLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/quarterLineRigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/quarterLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/quarterLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/thirdLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33333" />

    <android.support.constraint.Guideline
        android:id="@+id/thirdLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66666" />

    <android.support.constraint.Guideline
        android:id="@+id/thirdLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33333" />

    <android.support.constraint.Guideline
        android:id="@+id/thirdLineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66666" />v

</android.support.constraint.ConstraintLayout>