<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemInformationActivity">

    <ImageButton
        android:id="@+id/itemClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:background="@color/colorBackground"
        app:layout_constraintEnd_toStartOf="@id/rightMargin"
        app:layout_constraintTop_toBottomOf="@id/topMargin"
        />

    <TextView
        android:id="@+id/itemInformationHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatic_sc_bold"
        android:text="@string/itemInformationHeading"
        android:textSize="@dimen/textSizeHeading"
        app:layout_constraintEnd_toStartOf="@id/rightMargin"
        app:layout_constraintStart_toEndOf="@id/leftMargin"
        app:layout_constraintTop_toBottomOf="@id/itemClose" />

    <TextView
        android:id="@+id/whatInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/what"
        android:textSize="@dimen/textSizeMediumBig"
        app:layout_constraintStart_toStartOf="@+id/leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/itemInformationHeading" />

    <TextView
        android:id="@+id/howmuchInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/amount"
        android:textSize="@dimen/textSizeMediumBig"
        app:layout_constraintStart_toStartOf="@+id/leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/whatInfo" />

    <TextView
        android:id="@+id/descriptionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/info"
        android:textSize="@dimen/textSizeMediumBig"
        app:layout_constraintStart_toStartOf="@+id/leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/howmuchInfo" />

    <TextView
        android:id="@+id/whoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/who"
        android:textSize="@dimen/textSizeMediumBig"
        app:layout_constraintStart_toStartOf="@+id/leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInfo" />


    <CheckBox
        android:id="@+id/itemUrgentCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/urgent"
        android:textSize="@dimen/textSizeMediumBig"
        app:layout_constraintStart_toStartOf="@+id/leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/editItem" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/infoItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/quarterLineLeft"
        app:layout_constraintTop_toBottomOf="@+id/itemInformationHeading">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <TextView
            android:id="@+id/itemDesctiption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemAmount" />

        <TextView
            android:id="@+id/itemTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemDesctiption" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/editItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/quarterLineLeft"
        app:layout_constraintTop_toBottomOf="@+id/itemInformationHeading">

        <EditText
            android:id="@+id/itemEditName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/itemEditAmount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemEditName" />

        <EditText
            android:id="@+id/itemEditDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemEditAmount" />

        <Spinner
            android:id="@+id/itemEditTask"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemEditDescription" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/itemComplete"
        android:layout_width="@dimen/finishWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/done"
        app:layout_constraintBottom_toTopOf="@+id/bottomMargin"
        app:layout_constraintEnd_toStartOf="@+id/itemEdit" />

    <Button
        android:id="@+id/itemEdit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/bottomMargin"
        app:layout_constraintEnd_toStartOf="@id/itemDelete" />

    <Button
        android:id="@+id/itemDelete"
        android:layout_width="@dimen/finishWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/bottomMargin"
        app:layout_constraintEnd_toStartOf="@id/rightMargin" />

    <!-- Guidelines -->

    <android.support.constraint.Guideline
        android:id="@+id/leftMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <android.support.constraint.Guideline
        android:id="@+id/topMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <android.support.constraint.Guideline
        android:id="@+id/rightMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <android.support.constraint.Guideline
        android:id="@+id/centerLineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/centerLineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/quarterLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.26" />

    <android.support.constraint.Guideline
        android:id="@+id/quarterLineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87" />

    <android.support.constraint.Guideline
        android:id="@+id/quarterLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/quarterLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/thirdLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33333" />

    <android.support.constraint.Guideline
        android:id="@+id/thirdLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66666" />

    <android.support.constraint.Guideline
        android:id="@+id/thirdLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33333" />

    <android.support.constraint.Guideline
        android:id="@+id/thirdLineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66666" /></android.support.constraint.ConstraintLayout>